--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,6 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Josefin+Sans);
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300);
+@import url(https://fonts.googleapis.com/css?family=Space+Mono|Karla);
 
 $gray-1: #f9f9f9;
 $gray-2: #ccc;
@@ -18,9 +19,14 @@ $blue: #268bd2;
 // $blue: #6a9fb5;
 $brown: #8f5536;
 
-$root-font-family: "PT Sans", "Josefin Sans", "Source Sans Pro", "Lato", Helvetica, Arial, sans-serif;
+// $root-font-family: "PT Sans", "Josefin Sans", "Source Sans Pro", "Lato", Helvetica, Arial, sans-serif;
+$root-font-family: "Karla", sans-serif;
 $root-font-size: 16px;
 $root-line-height: 1.5;
+
+$header-font-family: "Space Mono", monospace;
+$header-font-size: 1.1rem;
+$paragraph-font-family: "Karla", sans-serif;
 
 $body-color: #515151;
 $body-bg: #fff;
