reorganized layout sass

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,9 @@
       </header>
 
       <main>
-        {{ content }}
+        <div class="main-content">
+          {{ content }}
+        </div>
       </main>
 
       <footer class="footer">
