--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
       <header class="masthead">
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+          <b class="pipe"> | </b>
           <small>{{ site.tagline }}</small>
         </h3>
       </header>
