--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,6 +19,10 @@ $blue: #268bd2;
 // $blue: #6a9fb5;
 $brown: #8f5536;
 
+// color scheme
+$dusty-purple:#945e79;
+$periwinkle: #706AB6;
+
 // $root-font-family: "PT Sans", "Josefin Sans", "Source Sans Pro", "Lato", Helvetica, Arial, sans-serif;
 $root-font-family: "Karla", sans-serif;
 $root-font-size: 16px;
